--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
